--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,11 @@ emd = {git = "https://gitlab.com/emd-dev/emd.git"}
 scipy = "^1.10.1"
 librosa = "^0.10.0.post2"
 
+[tool.poetry.dev-dependencies]
+black = "*"
+isort = "*"
+pre-commit = "*"
+
 
 [build-system]
 requires = ["poetry-core"]
