--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ opencv-python = "^4.7.0.72"
 emd = {git = "https://gitlab.com/emd-dev/emd.git"}
 scipy = "^1.10.1"
 librosa = "^0.10.0.post2"
+typed-argument-parser = "^1.8.0"
+tqdm = "^4.65.0"
 
 [tool.poetry.dev-dependencies]
 black = "*"
