--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ scipy = "^1.10.1"
 librosa = "^0.10.0.post2"
 typed-argument-parser = "^1.8.0"
 tqdm = "^4.65.0"
+jupyter = "^1.0.0"
+streamad = "^0.3.1"
 
 [tool.poetry.dev-dependencies]
 black = "*"
