--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ typed-argument-parser = "^1.8.0"
 tqdm = "^4.65.0"
 jupyter = "^1.0.0"
 streamad = "^0.3.1"
+kaleido = "0.2.1"
 
 [tool.poetry.dev-dependencies]
 black = "*"
