--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,12 +11,18 @@ opencv-python = "^4.7.0.72"
 emd = {git = "https://gitlab.com/emd-dev/emd.git"}
 scipy = "^1.10.1"
 librosa = "^0.10.0.post2"
+typed-argument-parser = "^1.8.0"
+pandas = "^2.0.1"
+tqdm = "^4.65.0"
 
 [tool.poetry.dev-dependencies]
 black = "*"
 isort = "*"
 pre-commit = "*"
 
+
+[tool.poetry.group.dev.dependencies]
+ipykernel = "^6.23.0"
 
 [build-system]
 requires = ["poetry-core"]
