--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,10 @@ tqdm = "^4.65.0"
 jupyter = "^1.0.0"
 streamad = "^0.3.1"
 kaleido = "0.2.1"
+tensorflow = "2.10"
+tensorflow-io-gcs-filesystem = "0.31.0"
+pydub = "^0.25.1"
+seaborn = "^0.12.2"
 
 [tool.poetry.dev-dependencies]
 black = "*"
